--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <div class="nes-container is-rounded">
             <ul id="list" class="list">
                 <!-- <li class="delete">
-                    ...
+                    <label>
+                    <input type="checkbox" id="checkbox" class="nes-checkbox" />
+                    <span>${todo.text}</span>
+                    </label>
+                    <i class="nes-icon close is-small nes-pointer" onclick="removeTodo(${todo.id})"></i>
                 </li> -->
             </ul>
         </div>
