--- a/index.html
+++ b/index.html
@@ -24,13 +24,23 @@
         <div class="nes-container is-rounded">
             <ul id="list" class="list">
                 <!-- <li class="delete">
-                    <label>
-                    <input type="checkbox" id="checkbox" class="nes-checkbox" />
+                     <label>
+                    <input type="checkbox" id="${todo.id}" class="nes-checkbox" onclick="ticked(${todo.id})"/>
                     <span>${todo.text}</span>
                     </label>
                     <i class="nes-icon close is-small nes-pointer" onclick="removeTodo(${todo.id})"></i>
                 </li> -->
             </ul>
+        </div>
+
+        <div class="progress">
+            <div class="icons">
+                <i class="nes-icon coin" id="coin"></i>
+            </div>
+            <div class="slider">
+                <i class="nes-kirby"></i>
+                <progress id="progress" class="nes-progress is-primary" max="100"></progress>
+            </div>
         </div>
 
         <script src="script.js"></script>
